[metadata]
name = git-hooks
version = 0.1.0
description = A collection of git-hook configs & pre-commit reference
long_description = file: README.md
url = https://github.com/kevinbowen777/git-hooks.git
author = Kevin Bowen
author_email = kevin.bowen@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[flake8]
# https://flake8.pycqa.org/en/latest/user/configuration.html
exclude =
    # No need to traverse git directory
    .git,
    # Skip cache directories
    __pycache__,
    build,
    .env,
    migrations/versions/190163627111_account_confirmation.py,
    migrations/versions/198b0eebcf9_caching_of_avatar_hashes.py,
    migrations/versions/1b966e7f4b9e_post_model.py,
    migrations/versions/2356a38169ea_followers.py,
    migrations/versions/288cd3dc5a8_rich_text_posts.py,
    migrations/versions/38c4e85512a9_initial_migration.py,
    migrations/versions/456a945560f6_login_support.py,
    migrations/versions/51f5ccfba190_comments.py,
    migrations/versions/56ed7d33de8d_user_roles.py,
    migrations/versions/d66f086b258_user_information.py,
    dist,
    images/
# https://www.flake8rules.com
ignore =
    # falsely triggers on list slicing
    E203
    # import at top, avoid circular imports
    E402
    # bare except
    E722
max-line-length = 119
per-file-ignores =
    # __init__ exports names
    app/api/__init__.py:F401
    app/auth/__init__.py:F401
    app/main/__init__.py:F401
    app/models.py:F401
    tests/test_selenium.py:F401
    # app/fake.py: F401
    # See: https://www.flake8rules.com/rules/W503.html
    app/auth/views.py:W503
